--- a/app/views/edit.erb
+++ b/app/views/edit.erb
@@ -1,8 +1,8 @@
-<form action="/recipes/<%= @recipe %>" method="post">
+<form action="/recipes/<%= @recipe.id %>" method="post">
   <input type="text" name="name" value="<%= @recipe.name %>">
   <input type="text" name="ingredients" value="<%= @recipe.ingredients %>">
   <input type="text" name="cook_time" value="<%= @recipe.cook_time %>">
-    
+
     <input id="hidden" type="hidden" name="_method" value="patch">
   <input type="submit" value="submit">
 </form>
