--- a/app/views/edit.erb
+++ b/app/views/edit.erb
@@ -1,4 +1,4 @@
-<form action="/recipes/<%= @recipe.id %>" method="post">
+<form method="post" action="/recipes/<%=@recipe.id%>">
   <input type="text" name="name" value="<%= @recipe.name %>">
   <input type="text" name="ingredients" value="<%= @recipe.ingredients %>">
   <input type="text" name="cook_time" value="<%= @recipe.cook_time %>">
